--- a/packages/zustand-oop/package.json
+++ b/packages/zustand-oop/package.json
@@ -11,7 +11,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "class-transformer": "^0.5.1",
     "immer": "^10.1.1",
