feat: support swr

--- a/packages/zustand-oop/package.json
+++ b/packages/zustand-oop/package.json
@@ -16,6 +16,7 @@
     "class-transformer": "^0.5.1",
     "immer": "^10.1.1",
     "reflect-metadata": "^0.2.2",
+    "swr": "^2.2.5",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
